@@ -1,6 +1,6 @@
-.TH SG_COPY_RESULTS "8" "September 2012" "sg3_utils\-1.34" SG3_UTILS
+.TH SG_COPY_RESULTS "8" "November 2012" "sg3_utils\-1.35" SG3_UTILS
 .SH NAME
-sg_copy_results \- sends a SCSI RECEIVE COPY RESULTS command
+sg_copy_results \- send SCSI RECEIVE COPY RESULTS command (XCOPY related)
 .SH SYNOPSIS
 .B sg_copy_results
 [\fI\-\-failed\fR|\fI\-\-params\fR|\fI\-\-receive\fR|\fI\-\-status\fR]
