@@ -1,6 +1,6 @@
-.TH SG_RAW "8" "February 2011" "sg3_utils\-1.31" SG3_UTILS
+.TH SG_RAW "8" "November 2012" "sg3_utils\-1.35" SG3_UTILS
 .SH NAME
-sg_raw \- sends an arbitrary SCSI command to a device
+sg_raw \- send arbitrary SCSI command to a device
 .SH SYNOPSIS
 .B sg_raw [\fIOPTIONS\fR] \fIDEVICE\fR CDB0 CDB1 ...
 .SH DESCRIPTION
@@ -125,7 +125,7 @@ Written by Ingo van Lil
 .SH "REPORTING BUGS"
 Report bugs to <inguin at gmx dot de>.
 .SH COPYRIGHT
-Copyright \(co 2001\-2011 Ingo van Lil
+Copyright \(co 2001\-2012 Ingo van Lil
 .br
 This software is distributed under the GPL version 2. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
