@@ -1,6 +1,6 @@
-.TH SG_READ_BLOCK_LIMITS "8" "February 2011" "sg3_utils\-1.31" SG3_UTILS
+.TH SG_READ_BLOCK_LIMITS "8" "November 2012" "sg3_utils\-1.35" SG3_UTILS
 .SH NAME
-sg_read_block_limits \- sends a SCSI READ BLOCK LIMITS command
+sg_read_block_limits \- send SCSI READ BLOCK LIMITS command
 .SH SYNOPSIS
 .B sg_read_block_limits
 [\fI\-\-help\fR] [\fI\-\-hex\fR] [\fI\-\-raw\fR] [\fI\-\-verbose\fR]
@@ -48,7 +48,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2009\-2011 Douglas Gilbert
+Copyright \(co 2009\-2012 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
