@@ -1,6 +1,6 @@
-.TH SG_READ_BUFFER "8" "February 2011" "sg3_utils\-1.31" SG3_UTILS
+.TH SG_READ_BUFFER "8" "November 2012" "sg3_utils\-1.35" SG3_UTILS
 .SH NAME
-sg_read_buffer \- send a SCSI READ BUFFER command
+sg_read_buffer \- send SCSI READ BUFFER command
 .SH SYNOPSIS
 .B sg_read_buffer
 [\fI\-\-help\fR] [\fI\-\-hex\fR] [\fI\-\-id=ID\fR] [\fI\-\-length=LEN\fR]
@@ -67,7 +67,7 @@ Written by Luben Tuikov and Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2011 Luben Tuikov and Douglas Gilbert
+Copyright \(co 2006\-2012 Luben Tuikov and Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
