@@ -1,6 +1,6 @@
-.TH SG_READCAP "8" "January 2011" "sg3_utils\-1.31" SG3_UTILS
+.TH SG_READCAP "8" "November 2012" "sg3_utils\-1.35" SG3_UTILS
 .SH NAME
-sg_readcap \- sends a SCSI READ CAPACITY command
+sg_readcap \- send SCSI READ CAPACITY command
 .SH SYNOPSIS
 .B sg_readcap
 [\fI\-\-16\fR] [\fI\-\-brief\fR] [\fI\-\-help\fR] [\fI\-\-hex\fR]
@@ -157,7 +157,7 @@ outputs version string then exits.
 .SH AUTHORS
 Written by Douglas Gilbert
 .SH COPYRIGHT
-Copyright \(co 1999\-2011 Douglas Gilbert
+Copyright \(co 1999\-2012 Douglas Gilbert
 .br
 This software is distributed under the GPL version 2. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
