@@ -1,6 +1,6 @@
-.TH SG_REASSIGN "8" "April 2009" "sg3_utils\-1.27" SG3_UTILS
+.TH SG_REASSIGN "8" "November 2012" "sg3_utils\-1.35" SG3_UTILS
 .SH NAME
-sg_reassign \- sends a SCSI REASSIGN BLOCKS command
+sg_reassign \- send SCSI REASSIGN BLOCKS command
 .SH SYNOPSIS
 .B sg_reassign
 [\fI\-\-address=A,A...\fR] [\fI\-\-dummy\fR] [\fI\-\-eight=0|1\fR]
@@ -136,7 +136,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2005\-2009 Douglas Gilbert
+Copyright \(co 2005\-2012 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
