@@ -1,6 +1,6 @@
-.TH SG_REFERRALS "8" "November 2010" "sg3_utils\-1.30" SG3_UTILS
+.TH SG_REFERRALS "8" "November 2012" "sg3_utils\-1.35" SG3_UTILS
 .SH NAME
-sg_referrals \- send the SCSI REPORT REFERRALS command
+sg_referrals \- send SCSI REPORT REFERRALS command
 .SH SYNOPSIS
 .B sg_referrals
 [\fI\-\-help\fR] [\fI\-\-hex\fR] [\fI\-\-lba=LBA\fR] [\fI\-\-maxlen=LEN\fR]
@@ -59,7 +59,7 @@ Written by Douglas Gilbert and Hannes Reinecke.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2009\-2010 Douglas Gilbert and Hannes Reinecke
+Copyright \(co 2009\-2012 Douglas Gilbert and Hannes Reinecke
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
