@@ -1,6 +1,6 @@
-.TH SG_RMSN "8" "February 2011" "sg3_utils\-1.31" SG3_UTILS
+.TH SG_RMSN "8" "November 2012" "sg3_utils\-1.31" SG3_UTILS
 .SH NAME
-sg_rmsn \- sends a SCSI READ MEDIA SERIAL NUMBER command
+sg_rmsn \- send SCSI READ MEDIA SERIAL NUMBER command
 .SH SYNOPSIS
 .B sg_rmsn
 [\fI\-\-help\fR] [\fI\-\-raw\fR] [\fI\-\-readonly\fR] [\fI\-\-verbose\fR]
@@ -56,7 +56,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2005\-2011 Douglas Gilbert
+Copyright \(co 2005\-2012 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
