@@ -1,6 +1,6 @@
-.TH SG_RTPG "8" "January 2007" "sg3_utils\-1.23" SG3_UTILS
+.TH SG_RTPG "8" "November 2012" "sg3_utils\-1.35" SG3_UTILS
 .SH NAME
-sg_rtpg \- sends a SCSI REPORT TARGET PORT GROUPS command
+sg_rtpg \- send SCSI REPORT TARGET PORT GROUPS command
 .SH SYNOPSIS
 .B sg_rtpg
 [\fI\-\-decode\fR] [\fI\-\-help\fR] [\fI\-\-hex\fR] [\fI\-\-raw\fR]
@@ -51,7 +51,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2004\-2007 Christophe Varoqui and Douglas Gilbert
+Copyright \(co 2004\-2012 Christophe Varoqui and Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
