@@ -1,6 +1,6 @@
-.TH SG_SANITIZE "8" "February 2012" "sg3_utils\-1.34" SG3_UTILS
+.TH SG_SANITIZE "8" "November 2012" "sg3_utils\-1.35" SG3_UTILS
 .SH NAME
-sg_sanitize \- remove all user data from a SCSI disk
+sg_sanitize \- remove all user data from disk with SCSI SANITIZE command
 .SH SYNOPSIS
 .B sg_sanitize
 [\fI\-\-ause\fR] [\fI\-\-block\fR] [\fI\-\-count=OC\fR] [\fI\-\-crypto\fR]
