@@ -1,4 +1,4 @@
-.TH SG_SES "8" "August 2012" "sg3_utils\-1.34" SG3_UTILS
+.TH SG_SES "8" "November 2012" "sg3_utils\-1.35" SG3_UTILS
 .SH NAME
 sg_ses \- access a SCSI Enclosure Services (SES) device
 .SH SYNOPSIS
@@ -25,7 +25,7 @@ If no options are given (i.e. only the \fIDEVICE\fR argument is given) then
 the names of all diagnostic pages supported are listed. Most, but not
 necessarily all, of the named diagnostic pages are defined in the SES
 standards and drafts. The most recent reference for this utility is the
-draft SCSI Enclosure Services 3 document T10/2149\-D Revision 3 at
+draft SCSI Enclosure Services 3 document T10/2149\-D Revision 5 at
 http://www.t10.org . Existing standards for SES and SES\-2 are ANSI INCITS
 305\-1998 and ANSI INCITS 448\-2008 respectively.
 .PP
@@ -306,6 +306,11 @@ misinterpreted the SES\-2 standard with its "element index" field. The
 code in this utility interprets the "element index" field as per the SES\-2
 standard and if that yields an inappropriate Element type, adjusts its
 indexing to follow that vendor's misinterpretation. 
+.PP
+In draft SES\-3 revision 5 the "Door Lock" element name was changed to
+the "Door" (and an OPEN field was added to the status element). As a
+consequence the former 'dl' element type abbreviation has been changed
+to 'do'.
 .PP
 There is a related command set called SAF\-TE (SCSI attached fault\-tolerant
 enclosure) for enclosure (including RAID) status and control. SCSI devices
