@@ -27,7 +27,7 @@
  * commands tailored for SES (enclosure) devices.
  */
 
-static char * version_str = "1.69 20121112";    /* ses3r04 */
+static char * version_str = "1.70 20121124";    /* ses3r05 */
 
 #define MX_ALLOC_LEN ((64 * 1024) - 1)
 #define MX_ELEM_HDR 1024
@@ -64,7 +64,7 @@ static char * version_str = "1.69 20121112";    /* ses3r04 */
 #define POWER_SUPPLY_ETC 0x2
 #define COOLING_ETC 0x3
 #define TEMPERATURE_ETC 0x4
-#define DOOR_LOCK_ETC 0x5
+#define DOOR_ETC 0x5	/* prior to ses3r05 was DOOR_LOCK_ETC */
 #define AUD_ALARM_ETC 0x6
 #define ESC_ELECTRONICS_ETC 0x7
 #define SCC_CELECTR_ETC 0x8
@@ -324,7 +324,8 @@ static struct element_type_t element_type_arr[] = {
     {POWER_SUPPLY_ETC, "ps", "Power supply"},
     {COOLING_ETC, "coo", "Cooling"},
     {TEMPERATURE_ETC, "ts", "Temperature sensor"},
-    {DOOR_LOCK_ETC, "dl", "Door lock"},
+    {DOOR_ETC, "do", "Door"},	/* prior to ses3r05 was 'dl' (for Door Lock)
+				   but the "Lock" has been dropped */
     {AUD_ALARM_ETC, "aa", "Audible alarm"},
     {ESC_ELECTRONICS_ETC, "esc", "Enclosure services controller electronics"},
     {SCC_CELECTR_ETC, "sce", "SCC controller electronics"},
@@ -1556,11 +1557,11 @@ enc_status_helper(const char * pad, const unsigned char * statp, int etype,
         else
             printf("%sTemperature: <reserved>\n", pad);
         break;
-    case DOOR_LOCK_ETC:
+    case DOOR_ETC:	/* OPEN field added in ses3r05 */
         if ((! filter) || ((0xc0 & statp[1]) || (0x1 & statp[3])))
-            printf("%sIdent=%d, Fail=%d, Unlock=%d\n", pad,
+            printf("%sIdent=%d, Fail=%d, Open=%d, Unlock=%d\n", pad,
                    !!(statp[1] & 0x80), !!(statp[1] & 0x40),
-                   !!(statp[3] & 0x1));
+                   !!(statp[3] & 0x2), !!(statp[3] & 0x1));
         break;
     case AUD_ALARM_ETC:     /* audible alarm */
         if ((! filter) || ((0xc0 & statp[1]) || (0xd0 & statp[3])))
